@@ -1,7 +1,14 @@
 Oct 18, 2002: Alex Burger <alex@users.sourceforge dot net>
+- Continuing on with the October 11th addition of get_custom_arguments:
+  -arguments now stored in a GSList
+  -custom_arg_num no longer needed in config file
+  -added to game structure and all games
+  -added basic ability to add arguments to Games Invoking pref page
+  -only visible for Quake3, Unreal Tournament and UT2003
+  -added support to q3_exec and (ut_exec already done)
 - Flipped locked_punkbuster icon
 - Increased default width of Priv column
-- Applied Ludwig's patch which reduces code needed to speed up
+- Applied Ludwig's patch which reduces code needed to speed up the
   startup of XQF
 - Added check to user_fix_defaults so that if 1 or more games are
   found it defaults to 'show only configured games'
